--- a/eventide/index.html
+++ b/eventide/index.html
@@ -442,10 +442,9 @@
 </footer>
 
 
-
-
 <script src="js/jquery-3.2.1.slim.min.js"></script>
 <script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/common.js"></script>
 
